@@ -13,6 +13,8 @@
 	* libseahorse/seahorse-util.h: Add generic functions for freeing string lists
 	* src/seahorse-generate-adv.c: Fix memory leak
 	* libseahorse/seahorse-gpgmex-util.c: Added implementation of gpgmex_key_copy_*
+	* libseahorse/seahorse-gpgmex-util.c: 
+	* libseahorse/seahorse-key.c: Fixed small bugs in remote key functionality
 	
 2004-11-22  Nate Nielsen <nielsen@memberwebs.com>
 
